--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
